# P4

./: .gitignore  MEMORIA AMPLIACIÓN PRÁCTICA 4.docx  Makefile  README.md  SES000.gmm  gmm.tgz  hola.lp  hola.mfcc  hola2.mfcc  hola5.mfcc.accel  hola5.mfcc.dif  lp_2_3.txt  lpcc_2_3.txt  meson.build  mfcc_2_3.txt  mfcc_delta_2_3.txt  mfcc_deltadelta_2_3.txt  pav_2181.fft  plot.py  plot_lpcc.py  plot_mfcc.py  prova1.mfcc
SPTK-3.11/: configure
SPTK-3.11/lib/: Makefile.in
SPTK-3.11/script/: Makefile.in
hola/: hola.dif  hola.lp  hola.mfcc  hola.mfcc.dif  hola1.mfcc
lists/final/: class.test  verif.test  verif.test.candidates  verif.users
lists/verif/: all.test  all.test.candidates  all.txt  impostors.test  impostors.txt  impostors4.test  impostors4.test.candidates  others.train  others.txt  users.test  users.test.candidates  users.train  users_and_others.train
pav_spkid_pytorch/: meson.build
scripts/: gmm_plot.pl  meson.build  plot_gmm.sh  plot_gmm_feat.py  run_spkid.sh  run_spkid_din.sh  spk_verif_score.pl  wav2lp.sh  wav2lpcc.sh  wav2mfcc.sh  wav2mfccdeltadelta.sh  wav2mfccdeltadeltatotal.sh  wav2mfccdif.sh
src/: meson.build
src/doxyfile/: Doxyfile.in  meson.build  style.css
src/fmatrix/: fmatrix_cut.cpp  fmatrix_show.cpp
src/gmm/: gmm_classify.cpp  gmm_show.cpp  gmm_train.cpp  gmm_verify.cpp
src/include/: .matrix.h.swp  digital_filter.h  filename.h  gmm.h  keyvalue.h  matrix.h  wavfile_mono.h
src/pav/: digital_filter.cpp  filename.cpp  gmm.cpp  gmm_vq.cpp  keyvalue.cpp  meson.build  wavfile_mono.cpp
src/pearson/: pearson.cpp  readme
work/: verif_lp_two.res  verif_lpcc_two.res  verif_mfcc_delta_two.res  verif_mfcc_deltadelta_two.res  verif_mfcc_two.res
work/mfcc_accel/BLOCK00/SES000/: SA000S05.mfcc_accel  SA000S06.mfcc_accel  SA000S07.mfcc_accel  SA000S08.mfcc_accel  SA000S10.mfcc_accel  SA000S13.mfcc_accel  SA000S15.mfcc_accel  SA000S16.mfcc_accel  SA000S20.mfcc_accel  SA000S21.mfcc_accel  SA000S24.mfcc_accel  SA000S25.mfcc_accel
work/mfcc_accel/BLOCK00/SES001/: SA001S01.mfcc_accel  SA001S02.mfcc_accel  SA001S03.mfcc_accel  SA001S05.mfcc_accel  SA001S11.mfcc_accel  SA001S14.mfcc_accel  SA001S20.mfcc_accel  SA001S25.mfcc_accel  SA001S28.mfcc_accel  SA001S29.mfcc_accel  SA001S30.mfcc_accel
work/mfcc_accel/BLOCK00/SES002/: SA002S01.mfcc_accel  SA002S04.mfcc_accel  SA002S09.mfcc_accel  SA002S10.mfcc_accel  SA002S11.mfcc_accel  SA002S12.mfcc_accel  SA002S13.mfcc_accel  SA002S17.mfcc_accel  SA002S22.mfcc_accel  SA002S27.mfcc_accel  SA002S28.mfcc_accel
work/mfcc_accel/BLOCK00/SES003/: SA003S03.mfcc_accel  SA003S09.mfcc_accel  SA003S11.mfcc_accel  SA003S19.mfcc_accel  SA003S20.mfcc_accel  SA003S26.mfcc_accel
work/mfcc_accel/BLOCK00/SES004/: SA004S03.mfcc_accel  SA004S12.mfcc_accel  SA004S17.mfcc_accel  SA004S20.mfcc_accel  SA004S21.mfcc_accel  SA004S26.mfcc_accel  SA004S28.mfcc_accel  SA004S29.mfcc_accel
work/mfcc_accel/BLOCK00/SES005/: SA005S05.mfcc_accel  SA005S10.mfcc_accel  SA005S11.mfcc_accel  SA005S12.mfcc_accel  SA005S15.mfcc_accel  SA005S17.mfcc_accel  SA005S18.mfcc_accel  SA005S20.mfcc_accel  SA005S21.mfcc_accel  SA005S24.mfcc_accel  SA005S27.mfcc_accel  (+1 more)
(+6220 files in other folders)
